@@ -12,12 +12,13 @@ AC_CHECK_LIB(dl, dlsym)
 AC_CHECK_LIB(nsl, nis_add)
 AC_CHECK_LIB(pam, pam_start)
 AC_CHECK_LIB(wrap, request_init)
+AC_CHECK_LIB(util, openpty)
 
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h syslog.h unistd.h)
+AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h pty.h syslog.h unistd.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
